--- a/apple-app-site-association.json
+++ b/apple-app-site-association.json
@@ -4,7 +4,7 @@
         "details": [
             {
                 "appID": "1398688949.com.guotoujinfu.JFPos",
-                "paths": ["*"]
+                "paths": ["/jmdpro/*"]
             }
         ]
     }
